# MaterialsFramework

./: AUTHORS.rst  CHANGELOG.rst  README.md  README.rst  alignn-environment.yml  alphanet-environment.yml  environment.yml  mace-environment.yml  main-environment.yml  orb-environment.yml  orb-uma-environment.yml  pyproject.toml  setup.cfg
materialsframework/analysis/: __init__.py  annni.py  bain.py  elastic_constants.py  eos.py  phono3py.py  phonopy.py
materialsframework/calculators/: __init__.py  calculator.py  chgnet.py  m3gnet.py  mace.py  megnet.py  relaxer.py  typing.py
materialsframework/io/: __init__.py  file_parser.py
materialsframework/transformations/: __init__.py  annni.py  bain.py  elastic_constants.py  eos.py  phono3py.py  phonopy.py  special_quasirandom_structures.py
src/materialsframework/analysis/: __init__.py  annni.py  bain.py  cubic_elastic_constants.py  elastic_constants.py  eos.py  formation_energy.py  neb.py  phono3py.py  phonopy.py  sbe.py  surface.py
src/materialsframework/calculators/: __init__.py  alignn.py  alphanet.py  chgnet.py  deepmd.py  divenet.py  eqnorm.py  eqv2.py  esen.py  gptff.py  grace.py  hienet.py  m3gnet.py  mace.py  mattersim.py  md.py  megnet.py  nequip.py  nequix.py  newtonnet.py  orb.py  petmad.py  posegnn.py  sevennet.py  typing.py  uma.py  vasp.py
src/materialsframework/io/: __init__.py  file_parser.py
src/materialsframework/tools/: __init__.py  cahn_hilliard.py  calculator.py  cluster_expansion.py  elastic.py  md.py  relaxer.py  sqs2tdb.py  stability_map.py  trajectory.py  utils.py
src/materialsframework/transformations/: __init__.py  annni.py  bain.py  elastic_constants.py  eos.py  formation_energy.py  phono3py.py  phonopy.py  special_quasirandom_structures.py
