[project]
name = "materialsframework"
version = "0.9.0"
authors = [
    { name = "Doguhan Sariturk", email = "doguhan.sariturk@gmail.com" },
]
description = "MaterialsFramework"
readme = "README.md"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Programming Language :: Python"
]

[project.urls]
Home-page = "https://github.com/dogusariturk/MaterialsFramework/"
Issues = "https://github.com/dogusariturk/MaterialsFramework/issues"
Repository = "https://github.com/dogusariturk/MaterialsFramework.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
