[metadata]
name = MaterialsFramework
description = MaterialsFramework
author = Doguhan Sariturk
author_email = dogu.sariturk@gmail.com
license = GPL-3.0-only
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/dogusariturk/MaterialsFramework/
project_urls =
    Source = https://github.com/dogusariturk/MaterialsFramework/

platforms = any

classifiers =
    Intended Audience :: Science/Research,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3),
    Natural Language :: English,
    Topic :: Scientific/Engineering,
    Topic :: Utilities,
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
package_dir =
           =.
packages = find:
